# aniimax

./: .gitignore  BETA_NOTES.md  Cargo.toml  README.md
data/: bouncy_brew_keg.csv  carousel_mill.csv  claw_game_cooker.csv  crafting_table.csv  dewy_house.csv  farmland.csv  grass_blossom_mat.csv  joy_wheel_loom.csv  jukebox_dryer.csv  mineral_pile.csv  nimbus_bed.csv  phonolfactory_table.csv  starfall_hammock.csv  tidewhisper_sandcastle.csv  woodland.csv
src/: coverage.rs  data.rs  lib.rs  main.rs  models.rs  optimizer.rs  wasm.rs
tests/: data_tests.rs  models_tests.rs  optimizer_tests.rs
web/: app.js  facilities.html  facilities.js  facility-config.js  index.html  style.css  worker.js
