[package]
name = "aniimax"
version = "0.14.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
microlp = "0.4.0"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
opt-level = "s"
lto = true
